Added latest version option